--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
   "name": "lms",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Basic Learning Management System project",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "express-flash": "^0.0.2",
     "express-session": "^1.18.2",
-    "fs": "^0.0.1-security",
     "method-override": "^3.0.0",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
-    "path": "^0.12.7",
     "pdfkit": "^0.17.2"
   }
 }
